<resources>
    <string name="app_name">Cafetería UDB</string>
    <string name="id_plato">Id plato</string>
    <string name="dia_plato">Dia</string>
    <string name="nombre_plato">Nombre plato</string>
    <string name="descripcion_plato">Descripción plato</string>
    <string name="precio_plato">Precio plato</string>
    <string name="BtnIngresar">Ingresar</string>
    <string name="texto_bienvenida">Bienvenido!</string>
    <string name="Instruccion">Inicia sesión para continuar como administrador</string>
    <string name="texto_olvidaste_contrasena">¿Olvidaste tu contraseña? Haz click aquí</string>
    <string name="TituloPlatillo">Nombre del platillo:</string>
    <string name="DescripcionPlatillo">Descripcion del platillo:</string>
    <string name="CategoriaPlatillo">Categoria:</string>
    <string name="DiaPlatillo">Dia Disponible:</string>
    <string name="PrecioPlatillo">Precio del platillo:</string>
    <string name="ImagenPlatillo">Imagen del platillo:</string>


</resources>