<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="48dp">

        <TextView
            android:id="@+id/texto_bienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/texto_bienvenida"
            android:paddingBottom="30dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/darkblue"
            />

        <TextView
            android:id="@+id/texto_instruccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Instruccion"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/darkblue"
            android:paddingBottom="45dp" />

        <EditText
            android:id="@+id/input_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:paddingBottom="25dp"
            android:layout_marginBottom="30dp"
            />



        <EditText
            android:id="@+id/input_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:paddingBottom="25dp"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:id="@+id/texto_olvidaste_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:text="@string/texto_olvidaste_contrasena"
            android:textAllCaps="false"
            android:textColor="@color/darkblue"
            android:textStyle="normal"
            android:textSize="14sp"
            android:layout_marginBottom="35dp"
            />

        <Button
            android:id="@+id/BtnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BtnIngresar"
            android:textColor="@color/yellow"
            android:background="@color/darkblue"
            android:layout_marginTop="20dp"
            android:textStyle="normal"

            >

        </Button>


    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>