<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="10dp"
    app:cardUseCompatPadding="true"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/img"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/DiaLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img"
            android:fontFamily="@font/montserrat_medium"
            android:text="Dia:"
            android:textColor="@color/azul"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/DiaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/DiaLbl"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/dia_plato"
            android:textColor="@color/azul"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/PlatoLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img"
            android:layout_below="@id/DiaLbl"
            android:fontFamily="@font/montserrat_medium"
            android:text="Plato:"
            android:textColor="@color/azul"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/platoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img"
            android:layout_below="@id/PlatoLbl"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/nombre_plato"
            android:textColor="@color/azul"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DescripcionLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img"
            android:layout_below="@id/platoTxt"
            android:fontFamily="@font/montserrat_medium"
            android:text="Descripcion:"
            android:textColor="@color/azul"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descripcionTxt"
            android:text="@string/descripcion_plato"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:textColor="@color/azul"
            android:layout_toRightOf="@id/img"
            android:layout_below="@id/DescripcionLbl"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/PrecioLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img"
            android:layout_below="@id/descripcionTxt"
            android:fontFamily="@font/montserrat_medium"
            android:text="Precio:"
            android:textColor="@color/amarillo"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/precioTxt"
            android:text="@string/precio_plato"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:textColor="@color/amarillo"
            android:layout_toRightOf="@id/PrecioLbl"
            android:layout_below="@id/descripcionTxt"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />
        <Button
            android:id="@+id/btnEditar"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_editar"
            android:backgroundTint="@null"
            android:textColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_toRightOf="@id/img"
            android:layout_below="@id/precioTxt"/>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_borrar"
            android:backgroundTint="@null"
            android:textColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_toRightOf="@id/btnEditar"
            android:layout_below="@id/precioTxt"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>